--- a/client/index.html
+++ b/client/index.html
@@ -70,6 +70,7 @@
           <script src="app/addJourney/addJourney.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/availableMethodsFilter/availableMethodsFilter.filter.js"></script>
           <script src="app/compareTo/compareTo.directive.js"></script>
           <script src="app/journeyFactory/journeyFactory.service.js"></script>
           <script src="app/main/main.controller.js"></script>
