Add (ugly) credit screen. Add footer to all pages.

--- a/client/index.html
+++ b/client/index.html
@@ -75,11 +75,14 @@
           <script src="app/journeyFactory/journeyFactory.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/credits/credits.js"></script>
+          <script src="app/credits/credits.controller.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
+          <script src="components/footer/footer.controller.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
