Added journey view page

--- a/client/index.html
+++ b/client/index.html
@@ -75,6 +75,8 @@
           <script src="app/compareTo/compareTo.directive.js"></script>
           <script src="app/credits/credits.controller.js"></script>
           <script src="app/credits/credits.js"></script>
+          <script src="app/journey/journey.controller.js"></script>
+          <script src="app/journey/journey.js"></script>
           <script src="app/journeyFactory/journeyFactory.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
